cmake_minimum_required(VERSION 3.12)
project(estanocandassamy)

set(CMAKE_CXX_STANDARD 14)

include_directories(extern/dia2code/src)
include_directories(extern/jsoncpp-1.8.0/json)
include_directories(extern/libxml2)
include_directories(extern/libxml2/include)
include_directories(extern/libxml2/include/libxml)
include_directories(src)
include_directories(src/client)
include_directories(src/shared)
include_directories(src/shared/state)

add_executable(estanocandassamy
        bin/client
        bin/dia2code
        build/cmake_install.cmake
        build/CMakeCache.txt
        build/Makefile
        docker/check_repo.sh
        docker/docker_clean.sh
        docker/plt-initial
        docker/run_docker_bash.sh
        docker/validate.sh
        extern/dia2code/src/code_generators.h
        extern/dia2code/src/comment_helper.c
        extern/dia2code/src/comment_helper.h
        extern/dia2code/src/decls.c
        extern/dia2code/src/decls.h
        extern/dia2code/src/dia2code.c
        extern/dia2code/src/dia2code.h
        extern/dia2code/src/generate_code_cpp.c
        extern/dia2code/src/includes.c
        extern/dia2code/src/includes.h
        extern/dia2code/src/main.c
        extern/dia2code/src/parse_diagram.c
        extern/dia2code/src/parse_diagram.h
        extern/dia2code/src/scan_tree.c
        extern/dia2code/src/source_parser.c
        extern/dia2code/src/source_parser.h
        extern/jsoncpp-1.8.0/json/json-forwards.h
        extern/jsoncpp-1.8.0/json/json.h
        extern/jsoncpp-1.8.0/jsoncpp.cpp
        extern/libxml2/include/libxml/c14n.h
        extern/libxml2/include/libxml/catalog.h
        extern/libxml2/include/libxml/chvalid.h
        extern/libxml2/include/libxml/debugXML.h
        extern/libxml2/include/libxml/dict.h
        extern/libxml2/include/libxml/DOCBparser.h
        extern/libxml2/include/libxml/encoding.h
        extern/libxml2/include/libxml/entities.h
        extern/libxml2/include/libxml/globals.h
        extern/libxml2/include/libxml/hash.h
        extern/libxml2/include/libxml/HTMLparser.h
        extern/libxml2/include/libxml/HTMLtree.h
        extern/libxml2/include/libxml/list.h
        extern/libxml2/include/libxml/nanoftp.h
        extern/libxml2/include/libxml/nanohttp.h
        extern/libxml2/include/libxml/parser.h
        extern/libxml2/include/libxml/parserInternals.h
        extern/libxml2/include/libxml/pattern.h
        extern/libxml2/include/libxml/relaxng.h
        extern/libxml2/include/libxml/SAX.h
        extern/libxml2/include/libxml/SAX2.h
        extern/libxml2/include/libxml/schemasInternals.h
        extern/libxml2/include/libxml/schematron.h
        extern/libxml2/include/libxml/threads.h
        extern/libxml2/include/libxml/tree.h
        extern/libxml2/include/libxml/uri.h
        extern/libxml2/include/libxml/valid.h
        extern/libxml2/include/libxml/xinclude.h
        extern/libxml2/include/libxml/xlink.h
        extern/libxml2/include/libxml/xmlautomata.h
        extern/libxml2/include/libxml/xmlerror.h
        extern/libxml2/include/libxml/xmlexports.h
        extern/libxml2/include/libxml/xmlIO.h
        extern/libxml2/include/libxml/xmlmemory.h
        extern/libxml2/include/libxml/xmlmodule.h
        extern/libxml2/include/libxml/xmlreader.h
        extern/libxml2/include/libxml/xmlregexp.h
        extern/libxml2/include/libxml/xmlsave.h
        extern/libxml2/include/libxml/xmlschemas.h
        extern/libxml2/include/libxml/xmlschemastypes.h
        extern/libxml2/include/libxml/xmlstring.h
        extern/libxml2/include/libxml/xmlunicode.h
        extern/libxml2/include/libxml/xmlversion.h
        extern/libxml2/include/libxml/xmlwin32version.h
        extern/libxml2/include/libxml/xmlwriter.h
        extern/libxml2/include/libxml/xpath.h
        extern/libxml2/include/libxml/xpathInternals.h
        extern/libxml2/include/libxml/xpointer.h
        extern/Makefile
        lib/libxml2.dll
        lib/libxml2.lib
        rapport/ModeleRapport.odt
        rapport/Rapport.tex
        src/client/main.cpp
        src/shared/state/Exemple.cpp
        src/shared/state/Exemple.h
        src/shared/state.h
        src/state.dia
        CMakeLists.txt
        Makefile
        Rapport.pdf)
